crates/iroha_smart_contract_derive/tests/ui/fail/main_with_return_type.rs
//! Return types are rejected for smart contract entrypoints.

use iroha_smart_contract::prelude::*;

#[iroha_smart_contract::main]
fn main(host: Iroha, context: Context) -> () {
    let _ = (host, context);
}
